tests/rosetta/out/Swift/anagrams.error
run error: exit status 1
/tmp/TestMochiToSwiftanagrams3575212560/001/main.swift:3:25: error: cannot assign value of type '[Any]' to type '[String]'
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:54:42Z
 2 | func sortRunes(_ s: String) -> String {
 3 |     var arr: [String] = [Any]()
   |                         |- error: cannot assign value of type '[Any]' to type '[String]'
   |                         `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
 4 |     var i = 0
 5 |     while i < s.count {

/tmp/TestMochiToSwiftanagrams3575212560/001/main.swift:6:22: error: cannot convert value of type 'Array<String.Element>' (aka 'Array<Character>') to expected element type 'String'
 4 |     var i = 0
 5 |     while i < s.count {
 6 |         arr = arr + [Array(s[i..<i + 1])]
   |                      `- error: cannot convert value of type 'Array<String.Element>' (aka 'Array<Character>') to expected element type 'String'
 7 |         i = i + 1
 8 |     }

/tmp/TestMochiToSwiftanagrams3575212560/001/main.swift:32:25: error: cannot assign value of type '[Any]' to type '[String]'
30 | }
31 | func sortStrings(_ xs: [String]) -> [String] {
32 |     var res: [String] = [Any]()
   |                         |- error: cannot assign value of type '[Any]' to type '[String]'
   |                         `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
33 |     var tmp = xs
34 |     while tmp.count > 0 {

/tmp/TestMochiToSwiftanagrams3575212560/001/main.swift:46:29: error: cannot assign value of type '[Any]' to type '[String]'
44 |         }
45 |         res = res + [min]
46 |         var out: [String] = [Any]()
   |                             |- error: cannot assign value of type '[Any]' to type '[String]'
   |                             `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
47 |         var j = 0
48 |         while j < tmp.count {

/tmp/TestMochiToSwiftanagrams3575212560/001/main.swift:60:38: error: use [:] to get an empty dictionary literal
58 | func main() {
59 |     var words = ["abel", "able", "bale", "bela", "elba", "alger", "glare", "lager", "large", "regal", "angel", "angle", "galen", "glean", "lange", "caret", "carte", "cater", "crate", "trace", "elan", "lane", "lean", "lena", "neal", "evil", "levi", "live", "veil", "vile"]
60 |     var groups: [String: [String]] = []
   |                                      `- error: use [:] to get an empty dictionary literal
61 |     var maxLen = 0
62 |     for w in words {

/tmp/TestMochiToSwiftanagrams3575212560/001/main.swift:74:35: error: use [:] to get an empty dictionary literal
72 |         }
73 |     }
74 |     var printed: [String: Bool] = []
   |                                   `- error: use [:] to get an empty dictionary literal
75 |     for w in words {
76 |         let k = sortRunes(w)
